--- a/style.css
+++ b/style.css
@@ -4,16 +4,27 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
+  
 } 
+
 nav{
   display: flex;
   height: 80px;
   width: 100%;
-  background: #1b1b1b;
+  background: #0E0E1B;
   align-items: center;
   justify-content: space-between;
   padding: 0 50px 0 100px;
   flex-wrap: wrap;
+  
+}
+#nav-menu {
+  list-style-type: none;
+  position: sticky;
+  top: 0;
+  margin: 0;
+  padding: 20px;
+ 
 }
 nav .logo{
   color: #fff;
@@ -113,13 +124,36 @@ input[type="checkbox"]{
   font-size: 40px;
   font-weight: 700;
 }
-#home{
-  border: 1px solid rebeccapurple;
-  height: 500px;
+/* ===================================== home*/
+body{
+  background-color: #161627;
 }
+
+#home{
+  padding-top: 50px;
+  width: 90%;
+  margin: auto;
+  text-align: center;
+  color: white;
+}
+#home>img{
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+}
+
+
+/* ===================================== about*/
+
 #about{
+  padding-top: 150px;
   border: 1px solid rebeccapurple;
   height: 500px;
+  margin-top: 100px;
+}
+#about>h1{
+  text-align: center;
+  color: white;
 }
 #skills{
   border: 1px solid rebeccapurple;
@@ -137,3 +171,55 @@ input[type="checkbox"]{
   border: 1px solid rebeccapurple;
   height: 500px;
 }
+
+
+
+/* #home{
+  
+  gap: 20px;
+}
+#left-home{
+  width: 100%;
+}
+#right-home{
+  width: 100%;
+}
+#left-home>img{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+#right-home>img{
+  width: 100%;
+  height: 100%;
+ border-radius: 50%;
+}
+@media (min-width:0px){
+  #home{
+    width: 90%;
+    margin: auto;
+    /* height: 600px; */
+  /* } */
+  /* #home>div{
+    width: 100%;
+    height: 100%;
+  }
+}  */
+/* @media (min-width:768px) and (max-width:2023px) {
+  #home{
+    width: 90%;
+    margin: auto;
+    display: flex;
+    height: 600px;
+  }
+  #left-home{
+    width: 40%;
+    height: 100%;
+  }
+  #right-home{
+    width: 60%;
+    height: 100%;
+  }
+} */
+
+/* ===================================== about*/
