--- a/style.css
+++ b/style.css
@@ -130,15 +130,15 @@ body{
 }
 
 #home{
-  padding-top: 50px;
+  padding-top: 150px;
   width: 90%;
   margin: auto;
   text-align: center;
   color: white;
 }
 #home>img{
-  width: 250px;
-  height: 250px;
+  width: 270px;
+  height: 255px;
   border-radius: 50%;
 }
 .home-img{
@@ -148,10 +148,10 @@ body{
 /* ===================================== about*/
 
 #about{
-  padding-top: 120px;
+  padding-top: 178px;
   /* border: 1px solid rebeccapurple; */
   /* height: 500px; */
-  margin-top: 100px;
+  /* margin-top: 1500px; */
   color: white;
   width: 90%;
   margin: auto;
@@ -187,10 +187,70 @@ body{
   color: white;
 }
 /* =======================================skills */
+
+
 #skills{
   border: 1px solid rebeccapurple;
-  height: 500px;
+  /* height: 500px; */
+  padding-top: 100px;
+  margin-top: 100px;
+  color: white;
+  text-align: center;
 }
+#skills>div{
+  padding-top: 50px;
+}
+#skills .container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+.skills-card {
+  width: calc(33.33% - 20px);
+  margin-bottom: 40px;
+  text-align: center;
+  background-color: #5e00bd;
+  box-shadow: 0 2px 8px rgba(255, 255, 255, 0.1);
+  transition: transform 0.3s ease;
+  border-radius: 10px;
+  padding-top: 30px;
+}
+
+.skills-card:hover {
+  transform: translateY(-10px);
+}
+
+.skills-card-img {
+  width: 80px;
+  height: 80px;
+  border-radius: 20px;
+}
+
+.skills-card-name {
+  font-size: 24px;
+  font-weight: bold;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  #skills{
+    width: 90%;
+    margin: auto;
+  }
+  #skills .container {
+    flex-direction: column;
+  }
+  
+  .skills-card {
+    width: 100%;
+  }
+}
+/* =======================================projects */
+
 #projects{
   border: 1px solid rebeccapurple;
   height: 500px;
