--- a/style.css
+++ b/style.css
@@ -184,6 +184,19 @@ body {
   border-radius: 5px;
   padding: 5px;
 }
+#resume-link-1{
+  padding: 5px;
+  font-size: 20px;
+  font-weight: 5px;
+  border-radius: 5px;
+  color: white;
+  background-color: red;
+  text-decoration: none;
+}
+#resume-link-2{
+  text-decoration: none;
+  color: white;
+}
 /* ===================================== about*/
 
 #about {
