--- a/style.css
+++ b/style.css
@@ -494,11 +494,11 @@ body {
 
 
 
-#resume {
+/* #resume {
   border: 1px solid rebeccapurple;
   height: 500px;
   background-color: white;
-}
+} */
 
 
 /* #home{
