--- a/style.css
+++ b/style.css
@@ -420,6 +420,7 @@ body {
 #contact>h1{
   text-align: center;
   text-decoration: underline;
+  color: white;
 }
 .contact-body{
   /* border:1px solid black; */
@@ -460,6 +461,28 @@ body {
   width:100%;
   height: 100%;
   border-radius: 10px;
+}
+#contact-img form{
+  width: 100%;
+  /* border: 1px solid red; */
+}
+#contact-img form input{
+  width: 100%;
+  margin-top: 10px;
+  height: 50px;
+  font-size: medium;
+  padding-left: 10px;
+}
+#contact-img h2{
+  color: white;
+}
+#contact-img button{
+  margin-top: 10px;
+  height: 40px;
+  width: 100px;
+  border-radius: 5px ;
+  background-color: red;
+  color: white;
 }
 /* -------------GITHUB SECTION----------------- */
 #github{
