--- a/style.css
+++ b/style.css
@@ -457,11 +457,11 @@ body {
   /* border:1px solid black; */
   width:45%;
 }
-#contact-img>img{
+/* #contact-img>img{
   width:100%;
   height: 100%;
   border-radius: 10px;
-}
+} */
 #contact-img form{
   width: 100%;
   /* border: 1px solid red; */
