--- a/style.css
+++ b/style.css
@@ -391,11 +391,10 @@ body {
 
 
 /* ==================contact */
-#contact {
+/* #contact {
   border: 1px solid rebeccapurple;
-  /* height: 500px; */
-  
-}
+  height: 500px;
+} */
 #ccontant{
   margin: auto;
   width: 90%;
@@ -511,66 +510,3 @@ body {
 }
 
 
-
-
-
-
-
-
-/* #resume {
-  border: 1px solid rebeccapurple;
-  height: 500px;
-  background-color: white;
-} */
-
-
-/* #home{
-  
-  gap: 20px;
-}
-#left-home{
-  width: 100%;
-}
-#right-home{
-  width: 100%;
-}
-#left-home>img{
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-}
-#right-home>img{
-  width: 100%;
-  height: 100%;
- border-radius: 50%;
-}
-@media (min-width:0px){
-  #home{
-    width: 90%;
-    margin: auto;
-    /* height: 600px; */
-/* } */
-/* #home>div{
-    width: 100%;
-    height: 100%;
-  }
-}  */
-/* @media (min-width:768px) and (max-width:2023px) {
-  #home{
-    width: 90%;
-    margin: auto;
-    display: flex;
-    height: 600px;
-  }
-  #left-home{
-    width: 40%;
-    height: 100%;
-  }
-  #right-home{
-    width: 60%;
-    height: 100%;
-  }
-} */
-
-
-/* ===================================== about*/
