updated resume add and some project add

--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ body {
   color: white;
   background-color: red;
   border-radius: 5px;
-  padding: 5px;
+  padding: px;
 }
 
 #resume-button-2 {
