--- a/responsive.css
+++ b/responsive.css
@@ -165,7 +165,7 @@
         margin: 20px auto;
     }
     .project-card{
-        display: flex;
+        display: block;
         flex-direction: column;
         padding:12px;
     }
@@ -176,11 +176,11 @@
         margin-top: 15px;
         width:100%;
     }
-    .project-tech-stack{
+    /* .project-tech-stack{
         display: grid;
         grid-template-columns: repeat(3,1fr);
         gap:10px;
-    }
+    } */
     .project-buttons{
         width:70%;
     }
